      "set slice text", "get text color", "set text color",
      "get text bg", "set text bg", "get outline", "set outline",
      "set wrap", "get wrap", "slice is text" [James]
    * "set slice visible", "get slice visible". Old command
      "set sprite visible" still exists but is now just an alias
      for "set slice visible". [James]
    * "number from string" [James]
    * There are now 3 NPC extra data fields (0-2) accessible with
      "set NPC extra" instead of 2 [Ralph]
    * "suspend timers", and "resume timers" [James]
    * "use menu item" [James]
    * hspeak now automatically stores a backup copy of your script
      inside the .hs file. Use the -n command line option if you
      want to disable this feature [James]

  * Vikings of Midgard

  * Stuff only Developers Will Notice
    * New slice routines for rectangular objects of various styles that
      can be organized into a tree and positioned and sized relative to
      one another. [Mike]
    * RPG format number has been incremented to 7 to provide
      forward-compat warnings when loading new RPG files into
      old versions of game [James]

April 03 2009 [xocolatl+2]

  * Bugfixes
    * Bug 684: Lower half of inventory screen gets deleted when you
      load [James]
    * Bug 348: Weapon is drawn behind other heroes [James]
    * Bug 689: When a hero who is currently picking a target dies,
      next hero's targetting was broken [James]
    * Bug 698: Global variables 1025-4095 couldn't be set [Ralph]
    * "input string" was causing an endless loop if ESC was
      pressed and "suspend player" was active [James]
    * Bug 703: NPC extra's aren't cleaned on restart [James]
    * Bug 700: Erroneous globals over 32767 when loading form save game
      [James]
    * Bug 710: Text box import loads door tag value into door id [James]
    * Bug 712: default plotstring colors are wrong after a
      non-title-screen load [James]